@@ -20,9 +20,11 @@
     "MUGS::App::WebSimple::Routes": "lib/MUGS/App/WebSimple/Routes.rakumod",
     "MUGS::App::WebSimple::Session": "lib/MUGS/App/WebSimple/Session.rakumod",
     "MUGS::UI::WebSimple": "lib/MUGS/UI/WebSimple.rakumod",
+    "MUGS::UI::WebSimple::Game::Echo": "lib/MUGS/UI/WebSimple/Game/Echo.rakumod",
     "MUGS::UI::WebSimple::Game::NumberGuess": "lib/MUGS/UI/WebSimple/Game/NumberGuess.rakumod",
     "MUGS::UI::WebSimple::Game::Snowman": "lib/MUGS/UI/WebSimple/Game/Snowman.rakumod",
-    "MUGS::UI::WebSimple::Genre::Guessing": "lib/MUGS/UI/WebSimple/Genre/Guessing.rakumod"
+    "MUGS::UI::WebSimple::Genre::Guessing": "lib/MUGS/UI/WebSimple/Genre/Guessing.rakumod",
+    "MUGS::UI::WebSimple::Genre::Test": "lib/MUGS/UI/WebSimple/Genre/Test.rakumod"
   },
   "resources": [
     "fake-tls/ca-crt.pem",
