@@ -13,3 +13,5 @@ div#identities th.row-label { text-align: left; padding-right: 1em }
 div#available-games-list th,td { text-align: left; padding-right: 1em }
 
 dt { font-weight: bold }
+
+div#echo { font-weight: bold; font-style: italic }
