@@ -1,0 +1,10 @@
+# ABSTRACT: General WebSimple UI genre for test "games"
+
+use MUGS::Core;
+use MUGS::Client::Genre::Test;
+use MUGS::UI::WebSimple;
+
+
+#| WebSimple UI genre for test "games"
+class MUGS::UI::WebSimple::Genre::Test is MUGS::UI::WebSimple::Game {
+}
