@@ -12,6 +12,8 @@ use MUGS::App::WebSimple::Session;
 use MUGS::App::WebSimple::Routes;
 
 use MUGS::UI::WebSimple;
+use MUGS::UI::WebSimple::Genre::Test;
+use MUGS::UI::WebSimple::Game::Echo;
 use MUGS::UI::WebSimple::Genre::Guessing;
 use MUGS::UI::WebSimple::Game::NumberGuess;
 use MUGS::UI::WebSimple::Game::Snowman;
