@@ -1,0 +1,17 @@
+<:use 'common.crotmp'><&page-header('Echo', .user)>
+<p>
+<.game-type> game <.game-id><!.done> (<a href="<.game-id>/leave">leave this game</a>)</!>:
+</p>
+<form method="POST" action="<.game-id>">
+  <div id="error"><.error></div>
+  <div id="echo"><.echo></div>
+  <div id="game-status"><&HTML(.game-status)></div>
+  <!.done>
+  <div>
+    Enter a message &gt; <input type="text" name="message" autofocus="autofocus" />
+  </div>
+  <input type="submit" value="Send Message" />
+  </!>
+  <div id="winloss-status"><.winloss-status></div>
+</form>
+<&page-footer>
